Revision history for Perl module XML::RSS

    - Removed some unused module requirements statements from lib/**.pm.
    - Added a note about date parsing/generation (thanks to an email
    correspondent).
    - Applied a patch by "David White" to have uppercase letter in 
    namespace/module identifiers.
        - https://rt.cpan.org/Ticket/Display.html?id=48405

1.44 - April 1, 2009
    - Applied a patch from Simon Wistow (after some modifications) to
    add support for multiple enclosures.
    - Added the t/xml-base.t test file from Simon Wistow to test for
    xml:base. Corrected for style.

1.43 - January 12, 2009
    - Fixed the date on the last entry on this changelog, to say "2009"
    instead of "2008".
        - http://rt.cpan.org/Ticket/Display.html?id=42304

1.42 - January 3, 2009
    - When transforming elements with attributes into hash-refs - make
    sure they are placed in the correct namespace. Previously 
    <media:description> over-rided the plain <description>. (as in Flickr).

1.41 - December 4, 2008    
    - Made the default keys for the channel link, description and title undef 
    instead of ''. They become '' once they are opened.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686
    - Now keeping track of rdf:resource of <image> in RSS 1.0:
        - http://rt.cpan.org/Ticket/Display.html?id=3978
    - Made sure that channel/{link,description,title} are localized to
    the empty string before rendering, to allow for better backwards
    compatibility.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686    

1.40 - December 1, 2008
    - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
    properly.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978
    - Now parsing multiple <category>'ies inside an <item> into an
    array-reference.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Now outputting an arayref of <item>/<category> prpoerly.