@@ -6,6 +6,7 @@ Revision history for Perl module XML::RSS
     - Applied a patch by "David White" to have uppercase letter in 
     namespace/module identifiers.
         - https://rt.cpan.org/Ticket/Display.html?id=48405
+    - Added "resources" and "keywords" to the Build.PL.
 
 1.44 - April 1, 2009
     - Applied a patch from Simon Wistow (after some modifications) to
